Updated integer initialization